--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-
+    <body {color: blue;}></body>
     <div>
-      <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
+      <h1 {id=color: red;}></h1><h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
       <ul>
