--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
 
   <body>
-    <body {color: blue;}></body>
+    <body {color: 00b3e6;}></body>
+    <div {width: 700px; margin: auto}></div>
     <div>
-      <h1 {id=color: red;}></h1><h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
+      <h1 {font-size: 22px}> </h1><h1> id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
       <ul>
